# sawback

./: README.md  sawback.rosinstall
sawback_description/: CMakeLists.txt  README.md  package.xml
sawback_description/config/: sawback.rviz
sawback_description/launch/: view_sawback.launch
sawback_description/urdf/: sawback.urdf.xacro  sawyer_mount.urdf.xacro
sawback_manipulation/: CMakeLists.txt  README.md  package.xml
sawback_manipulation/config/: gpd_config.yaml  sawback_demo.rviz  sawback_grasps.rviz
sawback_manipulation/include/: grasp_detection.hpp  sawback_pick_place.hpp
sawback_manipulation/include/sawback_manipulation/: cartesian_path.hpp  cloud_processing.hpp  grasp_detection.hpp  pick_place.hpp  sawback_pick_place.hpp
sawback_manipulation/include/sawback_manipulation/perception/: cloud_processing.hpp
sawback_manipulation/include/sawback_manipulation/solvers/: cartesian_path.hpp
sawback_manipulation/include/sawback_manipulation/tasks/: pick_place.hpp
sawback_manipulation/launch/: grasping.launch  sawback_demo.launch  sawback_manipulation.launch  visualization.launch
sawback_manipulation/src/: grasp_detection.cpp  grasp_detection_node.cpp  sawback_demo_node.cpp  sawback_pick_place.cpp  sawback_pick_place_node.cpp
sawback_manipulation/src/sawback_manipulation/: cartesian_path.cpp  cloud_processing.cpp  grasp_detection.cpp  pick_place.cpp  sawback_pick_place.cpp
sawback_manipulation/src/sawback_manipulation/perception/: cloud_processing.cpp
sawback_manipulation/src/sawback_manipulation/solvers/: cartesian_path.cpp
sawback_manipulation/src/sawback_manipulation/tasks/: pick_place.cpp
sawback_moveit/: CMakeLists.txt  package.xml
sawback_moveit_config/: CMakeLists.txt  package.xml
sawback_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_cpp.yaml  ompl_planning.yaml  sawback_controllers.yaml
sawback_moveit_config/launch/: fake_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  sawback_moveit.launch  sawback_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml
sawback_moveit_config/srdf/: sawback.srdf  sawback.srdf.xacro
sawback_msgs/: CMakeLists.txt  package.xml
sawback_msgs/action/: PickPlace.action
sawback_msgs/srv/: SampleGrasps.srv
