<?xml version="1.0"?>
<package format="2">
  <name>sawback_manipulation</name>
  <version>0.0.1</version>
  <description>Sawback manipulation tasks</description>

  <maintainer email="bostoncleek2020@u.northwestern.edu">bostoncleek</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_visual_tools</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>sawback_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>intera_interface</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>sawback_moveit_config</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>topic_tools</exec_depend>

</package>
