<?xml version="1.0"?>
<package format="2">
  <name>sawback_msgs</name>
  <version>0.0.1</version>
  <description>Messages used on the Sawback</description>

  <maintainer email="bostoncleek2020@u.northwestern.edu">bostoncleek</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
